center footer btn

--- a/src/App.scss
+++ b/src/App.scss
@@ -427,6 +427,8 @@
 
     .about-footer {
         margin: 40px 0;
+        display: flex;
+        justify-content: center;
 
         .back-btn {
             display: inline-block;
