--- a/src/App.scss
+++ b/src/App.scss
@@ -36,10 +36,12 @@
         }
 
         .header-title {
+            width: 60%;
             color: rgb(244, 238, 224);
             font-family: "Handlee", serif;
             font-size: 2.5rem;
-            margin: 0;
+            margin: 0 auto;
+            text-align: center;
             font-weight: 800;
             letter-spacing: 3px;
         }
@@ -285,10 +287,11 @@
         margin: 0 auto;
 
         h1 {
+            width: 60%;
             font-family: "Handlee", serif;
             font-size: 2.5rem;
             letter-spacing: 3px;
-            margin-bottom: 10px;
+            margin: 0 auto;
         }
 
         p {
@@ -379,10 +382,11 @@
             text-align: center;
 
             h1 {
+                width: 60%;
                 font-size: 2.5rem;
                 font-family: "Handlee", serif;
                 letter-spacing: 3px;
-                margin: 0;
+                margin: 0 auto;
             }
 
             p {
@@ -424,26 +428,10 @@
             }
         }
     }
-
-    .about-footer {
-        margin: 40px 0;
-        display: flex;
-        justify-content: center;
-
-        .back-btn {
-            display: inline-block;
-            background-color: rgb(244, 238, 224);
-            color: rgb(57, 54, 70);
-            padding: 10px 15px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1rem;
-        }
-    }
 }
 
 .saved-tldrs-container {
-    border-radius: 8px;
+    overflow-x: hidden;
 
     .header-container {
         display: flex;
@@ -482,10 +470,11 @@
         }
 
         h1 {
+            width: 60%;
             text-align: center;
             font-size: 2.5rem;
             font-family: "Handlee", serif;
-            margin: 0;
+            margin: 0 auto;
             letter-spacing: 3px;
             color: rgb(244, 238, 224);
         }
@@ -538,6 +527,10 @@
                     text-decoration: none;
                     display: block;
                     margin-bottom: 5px;
+                    width: 100%;
+                    word-wrap: break-word;
+                    overflow-wrap: break-word;
+                    word-break: break-word;
 
                     &:hover {
                         text-decoration: underline;
@@ -594,6 +587,148 @@
     }
 }
 
+.policy-container,
+.terms-container {
+    margin: 0 auto;
+    color: rgb(244, 238, 224);
+    user-select: none;
+
+    .header {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        margin: 20px;
+
+        .header-left-icon {
+            position: absolute;
+            left: 0;
+            width: fit-content;
+
+            svg {
+                cursor: pointer;
+                transition: fill 0.3s ease-in-out;
+
+                &:hover {
+                    fill: rgba(244, 238, 224, 0.9);
+                }
+            }
+        }
+
+        .policy-header,
+        .terms-header {
+            text-align: center;
+
+            h1 {
+                width: 60%;
+                font-size: 2.5rem;
+                font-family: "Handlee", serif;
+                letter-spacing: 3px;
+                margin: 0 auto;
+            }
+
+            p {
+                font-size: 1.2rem;
+                margin-bottom: 20px;
+            }
+        }
+    }
+
+    .policy-content,
+    .terms-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 60%;
+        gap: 20px;
+        margin: 30px auto;
+
+        .policy-box,
+        .terms-box {
+            width: 90%;
+            background-color: rgb(244, 238, 224);
+            color: rgb(57, 54, 70);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            text-align: left;
+
+            h2 {
+                font-size: 1.5rem;
+                margin-bottom: 10px;
+            }
+
+            p,
+            li {
+                font-size: 1rem;
+                line-height: 1.6;
+            }
+
+            ul {
+                padding-left: 20px;
+            }
+
+            a {
+                color: rgb(57, 54, 70);
+            }
+        }
+    }
+}
+
+.footer {
+  color: rgb(244, 238, 224);
+  padding: 1.5rem 0;
+  margin-top: 2.5rem;
+  
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .footer-nav {
+    display: flex;
+    gap: 1.5rem;
+    
+    a {
+      color: rgb(244, 238, 224);
+      text-decoration: none;
+      transition: color 0.3s;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        transform: scale(1.05);
+      }
+    }
+  }
+
+  .footer-social {
+    display: flex;
+    gap: 1rem;
+
+    .social-link {
+      width: 24px;
+      height: 24px;
+      display: inline-block;
+      background-size: contain;
+      background-repeat: no-repeat;
+
+      svg:hover {
+        transition: all 0.3s ease-in-out;
+        fill: rgba(244, 238, 224, 0.9);
+      }
+    }
+  }
+
+  .footer-text {
+    font-size: 0.875rem;
+    color: lighten(rgb(244, 238, 224), 20%);
+  }
+}
+
+
 *:disabled {
     cursor: not-allowed;
 }
@@ -628,6 +763,15 @@
             width: 80%;
         }
     }
+
+    .policy-container,
+    .terms-container {
+
+        .policy-content,
+        .terms-content {
+            width: 80%;
+        }
+    }
 }
 
 @media screen and (max-width: 1050px) {
@@ -655,6 +799,15 @@
             width: 90%;
         }
     }
+
+    .policy-container,
+    .terms-container {
+
+        .policy-content,
+        .terms-content {
+            width: 90%;
+        }
+    }
 }
 
 @media screen and (max-width: 550px) {
@@ -670,7 +823,8 @@
         }
     }
 
-    .header-title, h1 {
+    .header-title,
+    h1 {
         font-size: 2rem !important;
     }
 }
