--- a/src/App.scss
+++ b/src/App.scss
@@ -49,6 +49,13 @@
     }
 }
 
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .tldr-container {
     .header {
         display: flex;
