--- a/src/App.scss
+++ b/src/App.scss
@@ -36,8 +36,7 @@
         button {
             background-color: transparent;
             border: none;
-            color: #fff;
-            font-family: "Handlee", serif;
+            color: #F4EEE0;
             font-size: 1rem;
             text-decoration: none;
             cursor: pointer;
